# Proyecto1f

./: ArchivoInvalidoExc.cpp  ArchivoInvalidoExc.h  CMakeLists.txt  CargadorDatos.cpp  CargadorDatos.h  ColeccionEquipos.cpp  ColeccionEquipos.h  Equipo.cpp  Equipo.h  EquipoCritico.cpp  EquipoCritico.h  EquiposLaboratorio.cpp  EquiposLaboratorio.h  FormatoInvalidoExc.cpp  FormatoInvalidoExc.h  GeneradorReportes.cpp  GeneradorReportes.h  Incedencia.cpp  Incedencia.h  Incidencia.cpp  Incidencia.h  Interfaz.cpp  Interfaz.h  MaintenancePlanner.cpp  MaintenancePlanner.h  MantCorrectivo.cpp  MantCorrectivo.h  MantPreventivo.cpp  MantPreventivo.h  MantStrategy.cpp  MantStrategy.h  OperacionIconsistenteExc.cpp  OperacionIconsistenteExc.h  Ordenador_T.cpp  Ordenador_T.h  README.md  Simulador.cpp  Simulador.h  SistemaException.cpp  SistemaException.h  (+5 more)
